# mpi_average

./: CMakeLists.txt
.docker/: image_name
.podman/: image_name
src/: main.cpp
